[package]
name = "cw-bridge"
version = "0.1.0"
edition = "2021"
authors = ["jacksonmori < jackson@routerprotocol.com>"]
description = "bridge"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false

codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.3.0"

serde_json="1"
cw721 = "0.18.0"
cw721-base = { version = "0.16.0", features = ["library"] }
cosmwasm-storage = "1.0.0"
cw-utils = "1.0.1"
cosmwasm-std = "1.0.0"
cw-storage-plus = { version = "0.13.4" }
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cw20 = { version = "0.13.4" }
cw20-base = { version = "0.13.4", features = ["library"] }
cw0 = { version = "0.10.3" }
cw2 = { version = "0.13.2" }
cosmwasm-crypto = "1.0.0"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
arrayref = "0.3.6"
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
router-wasm-bindings = { version = "0.2.3", default-features = false, features = ["ethabi"] }
# new-crosstalk-sample = { package = "new-crosstalk-sample", path = "../../packages/new-crosstalk-sample"}

[dev-dependencies]
cosmwasm-schema = "1.3.0"
cw-multi-test = "0.16.5"