[package]
name = "cw-bridge"
version = "0.1.0"
edition = "2021"
authors = ["jacksonmori < jackson@routerprotocol.com>"]
description = "bridge"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false

codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.3.0"
cosmwasm-storage = "1.0.0"
cosmwasm-std = "1.0.0"
cw-storage-plus = { version = "1.1.0" }
router-wasm-bindings = { version = "0.2.4", default-features = false, features = ["ethabi"] }

[dev-dependencies]